err.txt
[33mCMake Warning (dev) at /usr/lib/cmake/pybind11/FindPythonLibsNew.cmake:101 (message):
  Policy CMP0148 is not set: The FindPythonInterp and FindPythonLibs modules
  are removed.  Run "cmake --help-policy CMP0148" for policy details.  Use
  the cmake_policy command to set the policy and suppress this warning, or
  preferably upgrade to using FindPython, either by calling it explicitly
  before pybind11, or by setting PYBIND11_FINDPYTHON ON before pybind11.
Call Stack (most recent call first):
  /usr/lib/cmake/pybind11/pybind11Tools.cmake:44 (find_package)
  /usr/lib/cmake/pybind11/pybind11Common.cmake:237 (include)
  /usr/lib/cmake/pybind11/pybind11Config.cmake:257 (include)
  CMakeLists.txt:15 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.
[0m
[0mCMake Deprecation Warning at /usr/lib/cmake/pybind11/FindPythonLibsNew.cmake:110 (cmake_policy):
  The OLD behavior for policy CMP0148 will be removed from a future version
  of CMake.

  The cmake-policies(7) manual explains that the OLD behaviors of all
  policies are deprecated and that a policy should be set to OLD only under
  specific short-term circumstances.  Projects should be ported to the NEW
  behavior and not rely on setting a policy to OLD.
Call Stack (most recent call first):
  /usr/lib/cmake/pybind11/pybind11Tools.cmake:44 (find_package)
  /usr/lib/cmake/pybind11/pybind11Common.cmake:237 (include)
  /usr/lib/cmake/pybind11/pybind11Config.cmake:257 (include)
  CMakeLists.txt:15 (find_package)

[0m
/home/sunix/Projekte/C++/runge-kutta-methods/binding.cpp: In function ‘void pybind11_init_hamsolver(pybind11::module_&)’:
/home/sunix/Projekte/C++/runge-kutta-methods/binding.cpp:38:39: error: ‘utils’ has not been declared
   38 |   m.def("cubic_hermite_interpolate", &utils::cubic_hermite_interpolate,
      |                                       ^~~~~
make[3]: *** [CMakeFiles/hamsolver.dir/build.make:79: CMakeFiles/hamsolver.dir/binding.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:188: CMakeFiles/hamsolver.dir/all] Error 2
make[1]: *** [Makefile:101: all] Error 2
make: *** [Makefile:8: build] Error 2
